force-app/main/default/objects/MDU_Tracker__c/MDU_Tracker__c.object-meta.xml
<CustomObject>
    <label>MDU Tracker</label>
    <nameField>
        <label>MDU Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDU Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>