force-app/main/default/objects/MDU_Tracker__c/fields/isCount__c.field-meta.xml
<CustomField>
    <fullName>isCount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCount</label>
    <type>Checkbox</type>
</CustomField>