force-app/main/default/objects/MDU_Tracker__c/fields/MDU_Chuzo__c.field-meta.xml
<CustomField>
    <fullName>MDU_Chuzo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDU Chuzo</label>
    <referenceTo>MDU_Chuzo__c</referenceTo>
    <relationshipLabel>MDU Trackers</relationshipLabel>
    <relationshipName>MDU_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>